# 2S-ESS

./: .gitignore  CMakeLists.txt  README.md
INPUT/: earth_config.nml  mars_config.nml  venus_config.nml
TEST/: test_earth_namelist.f90  test_earth_namelist_opt.f90  test_mars_namelist.f90  test_planetary_config.f90
docs/: 2STREAM_v2.4_Technical_Documentation.md  API_REFERENCE.md  BUILD_GUIDE.md  PROJECT_INDEX.md
sourcecode/: planet_config_io.f90  planet_config_mod.f90
sourcecode/2stream_2p4_feb15/: 2stream_master.f90  2stream_miscsetups.f90
sourcecode/2stream_2p4_optimized/: 2stream_sleave_routines.f90
sourcecode/2stream_2p4_optimized/solar/lat/: 2stream_auxgeom_lat.f90  2stream_inputs.f90
sourcecode/2stream_2p4_optimized/solar/obs/: 2stream_inputs_solar_obs.f90
sourcecode/FO_1p4_optimized/: FO_ScalarSS_RTCalcs_I_rps.f90
